<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/favorite"
            android:title="@string/favorite" />

    </group>

    <item android:title="@string/categories">
        <menu>
            <item
                android:id="@+id/nav_topic"
                android:icon="@mipmap/topic_black"
                android:title="@string/topic" />
            <item
                android:id="@+id/nav_country"
                android:icon="@mipmap/place_black"
                android:title="@string/country" />
        </menu>
    </item>

</menu>
