<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <ListPreference
        android:defaultValue="0"
        android:entries="@array/list_of_languages"
        android:entryValues="@array/list_of_languages_values"
        android:key="language"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/language_dialog_title" />

    <SwitchPreference
        android:defaultValue="False"
        android:key="night_mode"
        android:summary="@string/pref_description_night_mode"
        android:title="@string/night_mode_title" />


    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

<!--
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />
-->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/list_of_font_size_titles"
        android:entryValues="@array/list_of_font_size_values"
        android:key="font_size"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/font_size_dialog_title" />


</PreferenceScreen>
